--- a/index.html
+++ b/index.html
@@ -77,10 +77,8 @@
     }).setView([41.76,-72.69], 11); // default center is overridden by Google Sheet options and points
 
     //image overlay
-	var imageUrl = 'https://foxholestats.com/images/WorldMapControl.webp',
-   imageBounds = [[82.6, -180], [-82.6, 180]];
-L.imageOverlay(imageUrl, imageBounds).addTo(map);
-	var imageUrl = 'media/SUBREGIONS.png',
+
+	var imageUrl = 'media/map.png',
    imageBounds = [[82.6, -180], [-82.6, 180]];
 L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
