--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
     //image overlay
 
-//		var imageUrl = 'media/map.png',
-//	imageBounds = [[180, -300], [-180, 300]];
-//L.imageOverlay(imageUrl, imageBounds).addTo(map);
+		var imageUrl = 'media/map.png',
+	imageBounds = [[180, -300], [-180, 300]];
+L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
 	  
 
