--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
   <!-- Leaflet Markercluster layer support -->
   <script src="https://unpkg.com/leaflet.markercluster.layersupport@2.0.1/dist/leaflet.markercluster.layersupport.js"></script>
 
-  <!-- Leaflet control geocoder  -->
+  <!-- Leaflet control geocoder -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder@1.13.0/dist/Control.Geocoder.css" />
-  <script src="https://unpkg.com/leaflet-control-geocoder@1.13.0/dist/Control.Geocoder.js"></script> 
+  <script src="https://unpkg.com/leaflet-control-geocoder@2.4.0/dist/Control.Geocoder.js"></script>
 
-  <!-- Locate Control 
+  <!-- Locate Control -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet-locatecontrol/0.72.0/L.Control.Locate.min.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-locatecontrol/0.72.0/L.Control.Locate.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-locatecontrol/0.72.0/L.Control.Locate.min.js"></script>
 
   <!-- jQuery-CSV -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.11/jquery.csv.min.js"></script>
@@ -77,21 +77,23 @@
     }).setView([41.76,-72.69], 11); // default center is overridden by Google Sheet options and points
 
     //image overlay
-
-		var imageUrl = 'media/map.png',
-	imageBounds = [[200, -180], [-200, 180]];
+	var imageUrl = 'https://foxholestats.com/images/WorldMapControl.webp',
+   imageBounds = [[82.6, -180], [-82.6, 180]];
+L.imageOverlay(imageUrl, imageBounds).addTo(map);
+	var imageUrl = 'media/SUBREGIONS.png',
+   imageBounds = [[82.6, -180], [-82.6, 180]];
 L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
 	  
 
 //Coordinate Finder
-//    var marker = L.marker([0, 0], {
-//      draggable: true,
-//    }).addTo(map);
-//    marker.bindPopup('LatLng Marker').openPopup();
-//    marker.on('dragend', function(e) {
-//      marker.getPopup().setContent(marker.getLatLng().toString()).openOn(map);
-//    });
+    var marker = L.marker([0, 0], {
+      draggable: true,
+    }).addTo(map);
+    marker.bindPopup('LatLng Marker').openPopup();
+    marker.on('dragend', function(e) {
+      marker.getPopup().setContent(marker.getLatLng().toString()).openOn(map);
+    });
 
 	  
   </script>
