--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	var imageUrl = 'https://foxholestats.com/images/WorldMapControl.webp',
    imageBounds = [[82.6, -180], [-82.6, 180]];
 L.imageOverlay(imageUrl, imageBounds).addTo(map);
-	var imageUrl = 'media/SUBREGIONS.png',
+	var imageUrl = 'media/map.png',
    imageBounds = [[82.6, -180], [-82.6, 180]];
 L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
