--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
    imageBounds = [[82.6, -180], [-82.6, 180]];
 L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
-	  
+	  	var Url = 'https://app.singular.live/output/21ndn6m2vfoTm6fqYOamjg',
+   imageBounds = [[82.6, -180], [-82.6, 180]];
+L.imageOverlay(Url, imageBounds).addTo(map);
 
 //Coordinate Finder
 //    var marker = L.marker([0, 0], {
@@ -95,7 +97,7 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
 	  
   </script>
 
-<iframe src="https://app.singular.live/output/21ndn6m2vfoTm6fqYOamjg?aspect=16x9" title="description"></iframe>
+// <iframe src="https://app.singular.live/output/21ndn6m2vfoTm6fqYOamjg?aspect=16x9" title="description"></iframe>
 	  
   </script>
 
