--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <link href="style.css" rel="stylesheet" />
+<link rel="icon" type="image/png" href="./favicon.png">
 <head>
   <!-- Include the Singular Graphic SDK JavaSrcipt library -->
 
