--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <div>
     <!-- define iframe for a non-interactive Singular player instance -->
 	<iframe id="helldivers"
-      
+      style="width:1280px; height: 720px;"
       src="map.html">
 	</iframe>
 	<iframe id="SingularOverlay"
-      
+      style="width:1280px; height: 720px;"
       src="https://app.singular.live/output/7uLi3k3gou4VPYcGuApfCS/Output?aspect=16:9">
 	</iframe>
 
