--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="style.css" rel="stylesheet" />
+<link href="style2.css" rel="stylesheet" />
 <link rel="icon" type="image/png" href="./favicon.png">
 <head>
   <!-- Include the Singular Graphic SDK JavaSrcipt library -->
