--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
 
 </div>
 
-<script>
 
-	
+<script type="text/javascript">
+<!--
+if (screen.width <= 699) {
+document.location = "https://helldivers2stats.com/map";
+}
+//-->
+</script>
+<script>	
 var options = {
     class: 'iFrameClass',
     endpoint: 'https://app.singular.live',
