--- a/map.html
+++ b/map.html
@@ -77,9 +77,9 @@
     }).setView([41.76,-72.69], 11); // default center is overridden by Google Sheet options and points
 
     //image overlay
-//	var imageUrl = 'media/map.png',
-//   imageBounds = [[82.6, -180], [-82.6, 180]];
-//L.imageOverlay(imageUrl, imageBounds).addTo(map);
+	var imageUrl = 'media/map.png',
+   imageBounds = [[82.6, -180], [-82.6, 180]];
+L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
 
 	  
