--- a/map.html
+++ b/map.html
@@ -5,7 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="./favicon.png">
-
+    <style>
+      @font-face { font-family: font; src: url('font.otf'); } 
+      h1 {
+         font-family: font
+      }
+    </style>
+	
   <title>Loading the map...</title>
 
   <!-- jQuery-->
