--- a/map.html
+++ b/map.html
@@ -102,8 +102,9 @@ L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
 	  
   </script>
-
-
+<script>
+// zoom to ESKER	
+map.flyTo([48.019324, 66.181641], 2);
 	  
   </script>
 
