--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</iframe>
 	<iframe id="SingularOverlay"
       style="width:1280px; height: 720px;"
-      src="https://app.singular.live/output/7uLi3k3gou4VPYcGuApfCS/Output?aspect=16:9">
+      src="https://app.singular.live/output/7uLi3k3gou4VPYcGuApfCS/Output?width=1280&height=720">
 	</iframe>
 
 </div>
