--- a/pos.html
+++ b/pos.html
@@ -87,6 +87,10 @@
    imageBounds = [[82.6, -180], [-82.6, 180]];
 L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
+    //LINES image overlay
+	var imageUrl2 = 'media/LINES.svg',
+   imageBounds = [[82.6, -180], [-82.6, 180]];
+L.imageOverlay(imageUrl2, imageBounds).addTo(map);
 
 	  
 
